# ChangeLog for app-editors/adie
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/ChangeLog,v 1.17 2007/11/21 16:51:48 jer Exp $

  21 Nov 2007; Jeroen Roovers <jer@gentoo.org> adie-1.6.30.ebuild:
  Stable for HPPA (bug #199853).

  21 Nov 2007; Markus Meier <maekke@gentoo.org> adie-1.6.30.ebuild:
  x86 stable, bug #199853

  21 Nov 2007; Samuli Suominen <drac@gentoo.org> adie-1.6.30.ebuild:
  amd64 stable wrt #199853

*adie-1.6.30 (20 Nov 2007)

  20 Nov 2007; Matti Bickel <mabi@gentoo.org> -adie-1.6.25.ebuild,
  +adie-1.6.30.ebuild:
  version bump and removal

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> adie-1.6.27.ebuild:
  Stable for HPPA (bug #194813).

*adie-1.6.29 (01 Oct 2007)

  01 Oct 2007; Matti Bickel <mabi@gentoo.org> -adie-1.6.19.ebuild,
  +adie-1.6.29.ebuild:
  version bump. cleanup

*adie-1.6.27 (06 Jun 2007)

  06 Jun 2007; Matti Bickel <mabi@gentoo.org> +adie-1.6.27.ebuild:
  version bump

  06 Jun 2007; Jeroen Roovers <jer@gentoo.org> adie-1.6.25.ebuild:
  Stable for HPPA (bug #181017).

  25 May 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  corrected ChangeLog, so it conforms to our standards

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add herd

*adie-1.6.25 (28 Mar 2007)

  28 Mar 2007; Matti Bickel <mabi@gentoo.org> +adie-1.6.25.ebuild:
  Version bump

  05 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -adie-1.4.12.ebuild:
  QA: Removed unused versions.

  24 Dec 2006; Matti Bickel <mabi@gentoo.org> -adie-1.2.15.ebuild,
  -adie-1.5.4.ebuild:
  cleanup

*adie-1.6.19 (20 Dec 2006)

  20 Dec 2006; Matti Bickel <mabi@gentoo.org> +adie-1.6.19.ebuild:
  revbump (removal of -1.5.4 pending)

  30 Oct 2006; Matti Bickel <mabi@gentoo.org> adie-1.2.15.ebuild,
  adie-1.4.12.ebuild, adie-1.5.4.ebuild:
  Killed ranged deps, set DEPEND (bug #153328)

  29 Oct 2006; Matti Bickel <mabi@gentoo.org> -adie-1.0.53.ebuild: