@@ -1,8 +1,16 @@
-DIST fox-1.6.27.tar.gz 4193329 RMD160 224a7d250bb3e6f4af5709539392b5a1b619382d SHA1 1f657c3335cce7135e1b7490ccf6243aa0231042 SHA256 3f45b7425c5213e6d25c5dc92757c3b53968a239efedbe2de8ee9151cf9d9f45
-DIST fox-1.6.29.tar.gz 4192864 RMD160 82a6a7eead1787c764dbc0b026024d178bf61d62 SHA1 db8e55e945b223dd08228cb7d690c575ab798517 SHA256 491bf26ebedb2b6ff0cfe75760026aeff3d69494a6b14ab0e89d7242046c19f9
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST fox-1.6.30.tar.gz 4193328 RMD160 7fba6f4c306ae3169f12630c9e88643e92acca3b SHA1 3e0572221aaa83416fce3f248fbdc8298f194f4c SHA256 150fb5a7966ada0e7ebbfc1b98f3ee344399c55886fe796afc83bf80d6981914
-EBUILD adie-1.6.27.ebuild 418 RMD160 8d10df4a313e20fe475c8d90ab1a5e444d7e6321 SHA1 cd53de5e35c5f8ec47626f06619d637e32814860 SHA256 55b51c863d69023e75ff04e0ad3f6c0663188fb21762066f988f4e2e5d40b776
-EBUILD adie-1.6.29.ebuild 423 RMD160 b1ebcb753c387347dfef1b0cb35f32ce5ae2c895 SHA1 168f1ab21aceeeb96014e3e1df35e098749db0e1 SHA256 61ecdb765e4026fe37afe776e9af3f023adce282844131059c2d1702fd498784
+DIST fox-1.6.31.tar.gz 4193330 RMD160 3aef0492b6ab3f64307bc5486f733735dee81d2a SHA1 5f5720597bcd39b3e0805aaa761e6564ecf1913a SHA256 069bf2c5c62f9606ef9ef64410bfe8dcb731eed4911e56d14af0b0006153a6f8
 EBUILD adie-1.6.30.ebuild 416 RMD160 2f060b8cba561f2b89c08aa9d9c965b78270c74d SHA1 6c9bf23658c866758832fb2cfe6b3063597ac7f2 SHA256 cbba4165d51166c9331091f650a4905261222fe42fa7ca733e31ae83af2b392b
-MISC ChangeLog 2300 RMD160 7281e6ee11f06c27df64898158486c4fef05a3f7 SHA1 a1ff471a061b7c12c41c8a1d48a23afe4a31f938 SHA256 29c60e0a08356ac31c1afdb17383b73e288c0f5eddff70363bbd1bb64f1b0226
+EBUILD adie-1.6.31.ebuild 420 RMD160 05197dbb05b05dd0fcf621bc243b291bb58c60f8 SHA1 9f21170091efd7a82abdbafc97e3296553cc48d1 SHA256 3f1272a435c7b44bb1322ef4d59d72c851db039988e7e937234d4aeeb8d0adbd
+MISC ChangeLog 2466 RMD160 805ca62f62a938612fba01d2f1c8523694d47673 SHA1 10aaf84e3328035e272f46df74406131e2d7e280 SHA256 82140a74985f7f14bf269cbecb6de7c25a7a2424970e7305741684238de052af
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHuLGbfNMcoUhJ7GwRAnENAJ4jbH06aYdNeRe37/z0gAJH37kqXACfThEL
+5z78JlQdwxmWBWEa7yqbYkE=
+=A2Ek
+-----END PGP SIGNATURE-----
