@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/adie-1.6.29.ebuild,v 1.2 2007/10/06 15:09:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/adie-1.6.31.ebuild,v 1.1 2008/02/17 22:13:53 mabi Exp $
 
 inherit fox
 
