@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/adie
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/ChangeLog,v 1.17 2007/11/21 16:51:48 jer Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/ChangeLog,v 1.18 2008/02/17 22:13:53 mabi Exp $
+
+*adie-1.6.31 (17 Feb 2008)
+
+  17 Feb 2008; Matti Bickel <mabi@gentoo.org> -adie-1.6.27.ebuild,
+  -adie-1.6.29.ebuild, +adie-1.6.31.ebuild:
+  version bump. cleanups
 
   21 Nov 2007; Jeroen Roovers <jer@gentoo.org> adie-1.6.30.ebuild:
   Stable for HPPA (bug #199853).
